# OKR-warranted

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: aggregate_retrieval.json  country_regressions.json  minimal.json  phase9_human_reviewed_regressions.json  qa_seed_regressions.json  real_corpus_core.json  real_corpus_expanded.json  real_corpus_smoke.json
data/raw/: FAQ-question.json  abkhazia__289.md  afghanistan_af.json  afghanistan_af.md  albania_al.json  albania_al.md  algeria_dz.json  algeria_dz.md  american_samoa_as.json  american_samoa_as.md  andorra_ad.json  andorra_ad.md  angola_ao.json  angola_ao.md  anguilla_ai.json  anguilla_ai.md  antigua_and_barbuda_ag.md  (+483 more)
docs/: answer_failure_model.md  binary_question_template_experiment.md  cli-reference.md  configuration.md  corpus_eda_findings.md  ds_failure_analysis.md  retrieval_ablation_study.md  table_extraction_hardening.md
notebooks/: 01_failure_analysis.ipynb  02_corpus_eda.ipynb  03_embedding_umap.ipynb  04_answer_failure_model.ipynb
scripts/: compare_backends.sh  ds_retrieval_analysis.py  run_answer_failure_model.py  run_phase20_diagnostics.py  run_phase21_binary_v2.py  run_retrieval_ablation.py
tests/: test_analytics.py  test_api.py  test_benchmark_audit.py  test_benchmark_generation.py  test_calibration.py  test_config.py  test_embeddings.py  test_enrichment.py  test_evaluation.py  test_experiments.py  test_generation.py  test_ml_modeling.py  test_normalizers.py  test_parsers.py  test_pipeline.py  test_reranking.py  test_retrieval.py  test_retrieval_ablation.py  test_vector_store.py
(+60 files in other folders)
